# neural_network_control

./: .gitignore  README.md  commander.py
cpp/: CMakeLists.txt  controller.cpp
mixed/: .gitignore  Makefile  TODO.txt  buffer_specification.fbs  camera_data.py  commander.cpp  commander.py  communication.hpp  configuration.hpp  configuration.py  controller.cpp  controller.hpp  cpp_buffer_specifications.fbs  cpp_buffer_specifications_generated.h  fake_camera_data.py  fpga.hpp  monitoring.py  payload.py  serialization.hpp  serialization.py  topical_logger.py  write_config.py  writing.py
mixed/Buffers/: Integer.py  Spike.py
python/: TODO.txt  commander.py  configuration.py  fake_camera_data.py  monitoring.py  payload.py
python/Buffers/: IntegerArray.py
shell/communication/python/: TODO.txt  camera_data.py  commander.py  communication.py  configuration.py  controller.py  fake_camera_data.py  fpga.py  monitoring.py  parameter_monitor.py  payload.py  serialization.py  spikes_monitor.py  topical_logger.py  topology_monitor.py  weight_monitor.py
shell/communication_serialization/python/: controller.py  fpga.py  topical_monitor.py  writing.py
shell/mixed/python/: TODO.txt  camera_data.py  commander.py  controller.py  fpga.py  monitoring.py  parameter_monitor.py  payload.py  serialization.py  spikes_monitor.py  weight_monitor.py  write_config.py  write_parameters.py  write_topology.py  write_weights.py  writing.py
studies/communication/multi_host_settings/: desktop.py  raspberry.py
studies/echo_command/cpp/: README.txt
studies/serialization/serialize_orc/: main.py
(+35 files in other folders)
